# api_gateway/docs/swagger.json
@@ -203,6 +203,35 @@
                 "responses": {}
             }
         },
+        "/chat/history": {
+            "get": {
+                "security": [
+                    {
+                        "Token": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "chat"
+                ],
+                "summary": "получение списка чатов",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ChatId",
+                        "name": "username",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/ping": {
             "get": {
                 "description": "Публичный запрос, который клиент отправляет при запуске. Возвращает статус сервисов.",
@@ -333,6 +362,30 @@
                 "responses": {}
             }
         },
+        "/search/profile_by_id": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "search"
+                ],
+                "summary": "Поиск пользователей по id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id пользователя",
+                        "name": "username",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/search/profiles": {
             "get": {
                 "consumes": [
@@ -349,30 +402,6 @@
                     {
                         "type": "string",
                         "description": "Username пользователя",
-                        "name": "username",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/search/profiles_by_id": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "search"
-                ],
-                "summary": "Поиск пользователей по id",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "id пользователя",
                         "name": "username",
                         "in": "query",
                         "required": true
